--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,6 @@
-version: '3.5'
 services:
   ldap-account-manager:
-    image: ghcr.io/ldapaccountmanager/lam:8.4
+    image: ghcr.io/ldapaccountmanager/lam:8.9
     restart: unless-stopped
     ports:
       - "8080:80"
@@ -9,7 +8,7 @@ services:
       - lamconfig:/var/lib/ldap-account-manager/config
     environment:
       - LAM_PASSWORD=${LAM_PASSWORD}
-      - LAM_LANG=es_AR
+      - LAM_LANG=${LAM_LANG}
       - LDAP_SERVER=${LDAP_SERVER}
       - LDAP_DOMAIN=${LDAP_DOMAIN}
       - LDAP_BASE_DN=${LDAP_BASE_DN}
